<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elevation_bridge</name>
  <version>0.1.0</version>
  <description>
    Subscribes to registered pointcloud and odometry, builds a grid_map elevation map,
    computes per-cell slope, and publishes both a GridMap and a slope-encoded PointCloud2
    for use with NAV2 IntensityVoxelLayer.
  </description>
  <maintainer email="1120240524@smbu.edu.cn">jiedong01</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
